[package]
name = "skye"
version = "0.1.0"
authors = ["yichen <yichenwei@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
actix = "0.10"
actix-rt = "1"
actix-service = "1"
actix-http = "2"
actix-router = "0.2"
serde = "1"
serde_json = "1"
futures = "0.3"
pin-project = "1"
bytes = "1"
log = "0.4"
env_logger = "0.8"
dotenv = "0.15"
derive_more = "0.99"

[dependencies.log-panics]
version = "2.0.0"
features = ["with-backtrace"]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = false
debug-assertions = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3